--- a/index.html
+++ b/index.html
@@ -514,8 +514,8 @@
       const message = `Halo, saya ingin memesan produk:
       
 *${productName}*
-Harga: ${productPrice}
-Jumlah: ${quantity}
+Harga: Rp{productPrice}
+Jumlah: Rp{quantity}
 
 Total: ${productPrice.replace('$','') * quantity}
 
