--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
       <div class="flex justify-between items-center mb-8">
         <h2 class="text-2xl font-bold text-gray-800">All Products</h2>
         <div class="flex space-x-2">
+          <img src=https://fatimaazhr.psl17.my.id/uploads/1751431348819.jpg>
           <select class="border border-gray-300 rounded-md px-3 py-2 text-sm">
             <option>Sort by</option>
             <option>Price: Low to High</option>
